syntax = "proto3";

package brain.state.v1;

import "brain/shared/v1/envelope.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

service CacheAuthorityService {
  rpc SetValue(SetValueRequest) returns (SetValueResponse);
  rpc GetValue(GetValueRequest) returns (GetValueResponse);
  rpc DeleteValue(DeleteValueRequest) returns (DeleteValueResponse);
  rpc PushQueue(PushQueueRequest) returns (PushQueueResponse);
  rpc PopQueue(PopQueueRequest) returns (PopQueueResponse);
  rpc PeekQueue(PeekQueueRequest) returns (PeekQueueResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}

message CacheEntry {
  string component_id                        = 1;
  string key                                 = 2;
  google.protobuf.Value value                = 3;
  google.protobuf.Int32Value ttl_seconds     = 4;
}

message QueueEntry {
  string component_id         = 1;
  string queue                = 2;
  google.protobuf.Value value = 3;
}

message QueueDepth {
  string component_id = 1;
  string queue        = 2;
  uint64 size         = 3;
}

message HealthStatus {
  bool service_ready   = 1;
  bool substrate_ready = 2;
  string detail        = 3;
}

message SetValuePayload {
  string component_id                    = 1;
  string key                             = 2;
  google.protobuf.Value value            = 3;
  google.protobuf.Int32Value ttl_seconds = 4;
}

message SetValueRequest {
  brain.shared.v1.EnvelopeMeta metadata = 1;
  SetValuePayload payload               = 2;
}

message SetValueResponse {
  brain.shared.v1.EnvelopeMeta metadata       = 1;
  CacheEntry payload                          = 2;
  repeated brain.shared.v1.ErrorDetail errors = 3;
}

message GetValuePayload {
  string component_id = 1;
  string key          = 2;
}

message GetValueRequest {
  brain.shared.v1.EnvelopeMeta metadata = 1;
  GetValuePayload payload               = 2;
}

message GetValueResponse {
  brain.shared.v1.EnvelopeMeta metadata       = 1;
  CacheEntry payload                          = 2;
  repeated brain.shared.v1.ErrorDetail errors = 3;
}

message DeleteValuePayload {
  string component_id = 1;
  string key          = 2;
}

message DeleteValueRequest {
  brain.shared.v1.EnvelopeMeta metadata = 1;
  DeleteValuePayload payload            = 2;
}

message DeleteValueResponse {
  brain.shared.v1.EnvelopeMeta metadata       = 1;
  bool payload                                = 2;
  repeated brain.shared.v1.ErrorDetail errors = 3;
}

message PushQueuePayload {
  string component_id         = 1;
  string queue                = 2;
  google.protobuf.Value value = 3;
}

message PushQueueRequest {
  brain.shared.v1.EnvelopeMeta metadata = 1;
  PushQueuePayload payload              = 2;
}

message PushQueueResponse {
  brain.shared.v1.EnvelopeMeta metadata       = 1;
  QueueDepth payload                          = 2;
  repeated brain.shared.v1.ErrorDetail errors = 3;
}

message PopQueuePayload {
  string component_id = 1;
  string queue        = 2;
}

message PopQueueRequest {
  brain.shared.v1.EnvelopeMeta metadata = 1;
  PopQueuePayload payload               = 2;
}

message PopQueueResponse {
  brain.shared.v1.EnvelopeMeta metadata       = 1;
  QueueEntry payload                          = 2;
  repeated brain.shared.v1.ErrorDetail errors = 3;
}

message PeekQueuePayload {
  string component_id = 1;
  string queue        = 2;
}

message PeekQueueRequest {
  brain.shared.v1.EnvelopeMeta metadata = 1;
  PeekQueuePayload payload              = 2;
}

message PeekQueueResponse {
  brain.shared.v1.EnvelopeMeta metadata       = 1;
  QueueEntry payload                          = 2;
  repeated brain.shared.v1.ErrorDetail errors = 3;
}

message HealthPayload {}

message HealthRequest {
  brain.shared.v1.EnvelopeMeta metadata = 1;
  HealthPayload payload                 = 2;
}

message HealthResponse {
  brain.shared.v1.EnvelopeMeta metadata       = 1;
  HealthStatus payload                        = 2;
  repeated brain.shared.v1.ErrorDetail errors = 3;
}
